<resources>
    <string name="AD">Andorra</string>
    <string name="AE">United Arab Emirates</string>
    <string name="AF">Afghanistan</string>
    <string name="AG">Antigua and Barbuda</string>
    <string name="AI">Anguilla</string>
    <string name="AL">Albania</string>
    <string name="AM">Armenia</string>
    <string name="AO">Angola</string>
    <string name="AR">Argentina</string>
    <string name="AT">Austria</string>
    <string name="AU">Australia</string>
    <string name="AZ">Azerbaijan</string>
    <string name="BB">Barbados</string>
    <string name="BD">Bangladesh</string>
    <string name="BE">Belgium</string>
    <string name="BF">Burkina Faso</string>
    <string name="BG">Bulgaria</string>
    <string name="BH">Bahrain</string>
    <string name="BI">Burundi</string>
    <string name="BJ">Benin</string>
    <string name="BM">Bermuda Islands</string>
    <string name="BN">Brunei</string>
    <string name="BO">Bolivia</string>
    <string name="BR">Brazil</string>
    <string name="BS">Bahamas</string>
    <string name="BW">Botswana</string>
    <string name="BY">Belarus</string>
    <string name="BZ">Belize</string>
    <string name="CA">Canada</string>
    <string name="CF">Central African Republic</string>
    <string name="CG">Congo</string>
    <string name="CH">Switzerland</string>
    <string name="CK">Cook Islands</string>
    <string name="CL">Chile</string>
    <string name="CM">Cameroon</string>
    <string name="CN">China</string>
    <string name="CO">Colombia</string>
    <string name="CR">Costa Rica</string>
    <string name="CU">Cuba</string>
    <string name="CY">Cyprus</string>
    <string name="CZ">Czech Republic</string>
    <string name="DE">Germany</string>
    <string name="DJ">Djibouti</string>
    <string name="DK">Denmark</string>
    <string name="DO">Dominica Rep.</string>
    <string name="DZ">Algeria</string>
    <string name="EC">Ecuador</string>
    <string name="EE">Estonia</string>
    <string name="EG">Egypt</string>
    <string name="ES">Spain</string>
    <string name="ET">Ethiopia</string>
    <string name="Each_appliance_has_an_label">Each appliance has a label with information about the appliance, which looks similar like the image below.</string>
    <string name="FI">Finland</string>
    <string name="FJ">Fiji</string>
    <string name="FR">France</string>
    <string name="GA">Gabon</string>
    <string name="GB">United Kingdom</string>
    <string name="GD">Grenada</string>
    <string name="GE">Georgia</string>
    <string name="GF">French Guiana</string>
    <string name="GH">Ghana</string>
    <string name="GI">Gibraltar</string>
    <string name="GM">Gambia</string>
    <string name="GN">Guinea</string>
    <string name="GR">Greece</string>
    <string name="GT">Guatemala</string>
    <string name="GU">Guam</string>
    <string name="GY">Guyana</string>
    <string name="HK">Hongkong</string>
    <string name="HN">Honduras</string>
    <string name="HT">Haiti</string>
    <string name="HU">Hungary</string>
    <string name="ID">Indonesia</string>
    <string name="IE">Ireland</string>
    <string name="IL">Israel</string>
    <string name="IN">India</string>
    <string name="IQ">Iraq</string>
    <string name="IR">Iran</string>
    <string name="IS">Iceland</string>
    <string name="IT">Italy</string>
    <string name="Inventory_management">Wine Inventory Management</string>
    <string name="Inventory_type_detail_exact_change_to_generic">Changing type of inventory management from Exact to Generic will cause you to lose all data related to bottle position.</string>
    <string name="Inventory_type_detail_generic_change_to_exact">Changing type of inventory management from Generic to Exact will put all your wines into unplaced positions. You can position them by scanning the bottle labels.</string>
    <string name="Inventory_type_detail_title">Changing type of inventory management.</string>
    <string name="JM">Jamaica</string>
    <string name="JO">Jordan</string>
    <string name="JP">Japan</string>
    <string name="KE">Kenya</string>
    <string name="KG">Kyrgyzstan</string>
    <string name="KH">Kampuchea (Cambodia)</string>
    <string name="KP">North Korea</string>
    <string name="KR">Korea</string>
    <string name="KW">Kuwait</string>
    <string name="KZ">Kazakstan</string>
    <string name="Key_lock_automatic">Key lock automatic</string>
    <string name="LA">Laos</string>
    <string name="LB">Lebanon</string>
    <string name="LC">Saint Lueia</string>
    <string name="LI">Liechtenstein</string>
    <string name="LK">Sri Lanka</string>
    <string name="LR">Liberia</string>
    <string name="LS">Lesotho</string>
    <string name="LT">Lithuania</string>
    <string name="LU">Luxembourg</string>
    <string name="LV">Latvia</string>
    <string name="LY">Libya</string>
    <string name="MA">Morocco</string>
    <string name="MC">Monaco</string>
    <string name="MD">Republic of Moldova</string>
    <string name="MG">Madagascar</string>
    <string name="ML">Mali</string>
    <string name="MM">Burma</string>
    <string name="MN">Mongolia</string>
    <string name="MO">Macao</string>
    <string name="MS">Montserrat Island</string>
    <string name="MT">Malta</string>
    <string name="MU">Mauritius</string>
    <string name="MV">Maldives</string>
    <string name="MW">Malawi</string>
    <string name="MX">Mexico</string>
    <string name="MY">Malaysia</string>
    <string name="MZ">Mozambique</string>
    <string name="NA">Namibia</string>
    <string name="NE">Niger</string>
    <string name="NG">Nigeria</string>
    <string name="NI">Nicaragua</string>
    <string name="NL">Netherlands</string>
    <string name="NP">Nepal</string>
    <string name="NR">Nauru</string>
    <string name="NZ">New Zealand</string>
    <string name="OK">OK</string>
    <string name="OM">Oman</string>
    <string name="PA">Panama</string>
    <string name="PE">Peru</string>
    <string name="PF">French Polynesia</string>
    <string name="PG">Papua New Cuinea</string>
    <string name="PH">Philippines</string>
    <string name="PK">Pakistan</string>
    <string name="PL">Poland</string>
    <string name="PR">Puerto Rico</string>
    <string name="PT">Portugal</string>
    <string name="PY">Paraguay</string>
    <string name="QA">Qatar</string>
    <string name="RO">Romania</string>
    <string name="RU">Russia</string>
    <string name="SA">Saudi Arabia</string>
    <string name="SB">Solomon Islands</string>
    <string name="SC">Seychelles</string>
    <string name="SD">Sudan</string>
    <string name="SE">Sweden</string>
    <string name="SG">Singapore</string>
    <string name="SI">Slovenia</string>
    <string name="SK">Slovakia</string>
    <string name="SL">Sierra Leone</string>
    <string name="SM">San Marino</string>
    <string name="SN">Senegal</string>
    <string name="SO">Somali</string>
    <string name="SR">Suriname</string>
    <string name="ST">Sao Tome and Principe</string>
    <string name="SV">El Salvador</string>
    <string name="SY">Syria</string>
    <string name="SZ">Swaziland</string>
    <string name="TD">Chad</string>
    <string name="TG">Togo</string>
    <string name="TH">Thailand</string>
    <string name="TJ">Tajikstan</string>
    <string name="TM">Turkmenistan</string>
    <string name="TN">Tunisia</string>
    <string name="TO">Tonga</string>
    <string name="TR">Turkey</string>
    <string name="TT">Trinidad and Tobago</string>
    <string name="TW">Taiwan</string>
    <string name="TZ">Tanzania</string>
    <string name="They_are_located_mostly">They are located mostly on the inside of a door or door frame, or on the back/bottom of the appliance.</string>
    <string name="UA">Ukraine</string>
    <string name="UG">Uganda</string>
    <string name="US">United States of America</string>
    <string name="UY">Uruguay</string>
    <string name="UZ">Uzbekistan</string>
    <string name="VC">Saint Vincent</string>
    <string name="VE">Venezuela</string>
    <string name="VN">Vietnam</string>
    <string name="btn_main_close"></string>
    <string name="cancel">CANCEL</string>
    <string name="check_your_email">Check your email.</string>
    <string name="confirm">CONFIRM</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="did_you_forget_your_password">Forgot Password?</string>
    <string name="free_from_uppercase">FREE FROM</string>
    <string name="icon_left_top_back_button"></string>
    <string name="icon_login_password_show"></string>
    <string name="inventory_big">INVENTORY: LAST IN</string>
    <string name="inventory_small">INVENTORY: FIRST IN</string>
    <string name="login_register_third_title">Don\'t like to type?</string>
    <string name="login_third_content">Use any of the options below to sign in.</string>
    <string name="name_big">NAME: Z–A</string>
    <string name="name_small">NAME: A–Z</string>
    <string name="password">Password</string>
    <string name="password_input_hint">Password</string>
    <string name="register_manually">REGISTER NEW ACCOUNT MANUALLY</string>
    <string name="register_verification_tips">Please enter the verification code from the email to continue with registration.</string>
    <string name="register_verification_tips_edit">We have sent the verification code to %s. Please enter the verification code to continue with the registration.</string>
    <string name="resend_verification_code">RESEND VERIFICATION CODE</string>
    <string name="save">SAVE</string>
    <string name="setting_allergies_food_preferences">Allergies &amp; food preferences</string>
    <string name="setting_celery_allergy">Celery allergy</string>
    <string name="setting_cereals_gluten_allergy">Cereals gluten allergy</string>
    <string name="setting_crustaceans_allergy">Shell Fish Allergy</string>
    <string name="setting_egg_allergy">Egg allergy</string>
    <string name="setting_fish_allergy">Fish allergy</string>
    <string name="setting_food_preferences">FOOD PREFERENCES</string>
    <string name="setting_gluten_allergy">Gluten allergy</string>
    <string name="setting_halal">Halal</string>
    <string name="setting_lactose_allergy">Lactose allergy</string>
    <string name="setting_low_carb">Low carb</string>
    <string name="setting_molluscs_allergy">Molluscs allergy</string>
    <string name="setting_mustarsd_allergy">Mustards allergy</string>
    <string name="setting_no">None</string>
    <string name="setting_no_beef">No beef</string>
    <string name="setting_no_chicken">No chicken</string>
    <string name="setting_no_fish">No fish</string>
    <string name="setting_no_pork">No pork</string>
    <string name="setting_nuts_allergy">Nuts allergy</string>
    <string name="setting_sesame_seeds_allergy">Sesame seeds allergy</string>
    <string name="setting_soy_allergy">Soy allergy</string>
    <string name="setting_sulphur_dioxide_allergy">Sulphur dioxide allergy</string>
    <string name="setting_vegan">Vegan</string>
    <string name="setting_vegetarian">Vegetarian</string>
    <string name="setting_wheat_allergy">Wheat allergy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_manually">SIGN IN MANUALLY</string>
    <string name="sign_in_with_another_account">SIGN IN WITH ANOTHER ACCOUNT</string>
    <string name="sort_tip">Sort inventory wine by</string>
    <string name="user_name">User Name</string>
    <string name="verification_code">Verification code</string>
    <string name="verification_code_up">VERIFICATION CODE</string>
    <string name="vintage_old">VINTAGE: OLDER FIRST</string>
    <string name="vintage_young">VINTAGE: YOUNGER FIRST</string>
    <string name="your_password">Your password</string>
    <string name="your_password_for">Your password for</string>
</resources>