<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/colorLayoutBackground" android:layout_width="match_parent" android:layout_height="44dp">
        <TextView android:textSize="20dp" android:textColor="@color/colorBlack" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/icon_left_top_back_button" android:onClick="leftTopBackButtonOnClick" android:fontFamily="@font/iconfont_g" android:layout_marginStart="@dimen/margin_14" android:layout_marginEnd="@dimen/margin_40"/>
        <TextView android:textSize="20sp" android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_allergies_food_preferences"/>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_37" android:layout_marginBottom="@dimen/margin_21" android:text="@string/free_from_uppercase" android:layout_marginStart="@dimen/margin_32"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_allergies_none" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_lactose_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_lactose_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_wheat_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_wheat_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_nuts_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_nuts_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_crustaceans_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_crustaceans_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_fish_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_fish_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_mustarsd_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_mustarsd_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_sesame_seeds_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_sesame_seeds_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_egg_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_egg_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_soy_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_soy_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_gluten_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_gluten_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_celery_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_celery_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_sulphur_dioxide_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_sulphur_dioxide_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_mollucs_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_molluscs_allergy"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_cereals_gluten_allergy" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_cereals_gluten_allergy"/>
            <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_62" android:layout_marginBottom="@dimen/margin_30" android:text="@string/setting_food_preferences" android:lines="1" android:layout_marginStart="@dimen/margin_32"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_preference_none" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_hallal" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_halal"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_vegetarian" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_vegetarian"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_no_pork" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no_pork"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_no_chicken" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no_chicken"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_low_carb" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_low_carb"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_vegan" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_vegan"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_no_beef" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no_beef"/>
            <com.hisense.connect_life.core.widget.CheckboxItem android:id="@+id/cbl_no_fish" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setting_no_fish"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="52dp">
        <Button android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorBlack" android:background="@color/color_button_cancel" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1" android:onClick="cancelOnClick"/>
        <Button android:textSize="20sp" android:textStyle="bold" android:textColor="@color/colorWhite" android:background="@color/colorButton" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/save" android:layout_weight="1" android:onClick="saveOnClick"/>
    </LinearLayout>
</LinearLayout>
