<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/container" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:id="@+id/user_card_view" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="@dimen/margin_88" app:cardBackgroundColor="@color/user_bg_1" app:cardCornerRadius="50dp">
        <ImageView android:id="@+id/user_image" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop"/>
        <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/colorWhite" android:gravity="center" android:layout_gravity="center" android:id="@+id/user_text" android:layout_width="match_parent" android:layout_height="match_parent" android:text="UN"/>
    </androidx.cardview.widget.CardView>
    <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/colorBlack" android:layout_gravity="center_horizontal" android:id="@+id/user_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_12" android:text="@string/user_name"/>
    <TextView android:textSize="@dimen/text_size_16" android:layout_marginTop="@dimen/margin_60" android:text="@string/password_input_hint" style="@style/title_text_style"/>
    <LinearLayout android:id="@+id/password_input_layout" android:layout_marginTop="@dimen/margin_24" style="@style/layout_edit_input_style">
        <EditText android:id="@+id/sign_password" android:hint="@string/your_password" android:inputType="textPassword" style="@style/edit_input_in_layout_style"/>
        <com.hisense.connect_life.core.widget.IconFontView android:id="@+id/show_hide_password_user" android:text="@string/icon_login_password_show" style="@style/show_hide_password_style"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/til_password_pw" app:hintEnabled="false" style="@style/edit_textinput_hint_style"/>
    <TextView android:id="@+id/password_for_email" android:visibility="gone" android:text="@string/your_password_for" style="@style/reminder_text_style"/>
    <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/colorText_7b" android:id="@+id/forget_password_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_80" android:text="@string/did_you_forget_your_password" android:layout_marginStart="@dimen/margin_32"/>
    <Space android:layout_width="wrap_content" android:layout_height="0dp" android:layout_weight="1"/>
    <LinearLayout android:orientation="vertical" android:id="@+id/bottom_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_32">
        <Button android:enabled="false" android:textColor="@color/colorText_86" android:id="@+id/login" android:background="@drawable/button_next_unselect_bg" android:text="@string/sign_in" style="@style/bottom_btn_style"/>
        <TextView android:id="@+id/sign_with" android:text="@string/sign_in_with_another_account" style="@style/bottom_cancel_text_style"/>
    </LinearLayout>
</LinearLayout>
