<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.hisense.connect_life.core.widget.IconFontView android:textSize="@dimen/text_size_16" android:textColor="@color/colorBlack" android:id="@+id/close" android:padding="@dimen/margin_14" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_main_close" android:layout_marginStart="@dimen/margin_8"/>
    <TextView android:textSize="@dimen/text_size_16" android:textColor="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_52" android:text="@string/password" android:layout_marginStart="@dimen/margin_32"/>
    <LinearLayout android:id="@+id/password_input_layout" android:background="@drawable/edittext_background_e9" android:layout_marginTop="@dimen/margin_24" style="@style/layout_edit_input_style">
        <EditText android:id="@+id/sign_password" android:hint="@string/your_password" android:inputType="textPassword" style="@style/edit_input_in_layout_style"/>
        <com.hisense.connect_life.core.widget.IconFontView android:id="@+id/show_hide_password_delete_user" android:text="@string/icon_login_password_show" style="@style/show_hide_password_style"/>
    </LinearLayout>
    <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/colorBlack" android:gravity="end" android:id="@+id/forget_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_26" android:text="@string/did_you_forget_your_password" android:layout_marginStart="@dimen/margin_16" android:layout_marginEnd="@dimen/margin_16"/>
    <TextView android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@+id/confirm" android:background="@color/colorButton" android:layout_width="match_parent" android:layout_height="@dimen/margin_52" android:layout_marginTop="@dimen/margin_32" android:text="@string/confirm"/>
    <RelativeLayout android:gravity="center_vertical" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/margin_80">
        <TextView android:textStyle="bold" android:textColor="@color/colorBlack" android:gravity="center" android:id="@+id/cancel" android:background="@drawable/button_circle_hollow" android:visibility="gone" android:layout_width="106dp" android:layout_height="35dp" android:text="@string/cancel" android:layout_marginEnd="@dimen/margin_12" android:layout_toStartOf="@+id/confirm1"/>
        <TextView android:textStyle="bold" android:textColor="@color/colorWhite" android:gravity="center" android:id="@+id/confirm1" android:background="@drawable/button_circle_solid" android:layout_width="157dp" android:layout_height="35dp" android:text="@string/confirm" android:layout_marginEnd="@dimen/margin_22" android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>
